--- a/SelectionCommittee_/pom.xml
+++ b/SelectionCommittee_/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.3.3.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -89,7 +90,7 @@
     </dependencies>
 
     <build>
-        <finalName>login-tutorial</finalName>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
